svg-builder/src/scss/left-sidebar.scss
#left-sidebar {
    grid-area: leftSidebar;
    display: flex;
    flex-direction: column;
    gap: 12px;
    margin: 0 4px 4px;
    overflow-y: auto;
    overscroll-behavior: contain;
}

#layer-management {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    gap: 10px;
}

#layer-select {
    label {
        flex-wrap: initial;
    }

    input {
        background-color: var(--main-bg-color);
        border: 0;
        outline: 0;
        color: var(--main-text-color);
    }

    .layer-selector {
        * {
            color: var(--main-text-color);
            fill: var(--main-text-color);
            stroke: var(--main-text-color);
        }

        &:has(input:checked) * {
            background-color: white;
            color: var(--sub-text-color);
            fill: var(--sub-text-color);
            stroke: var(--sub-text-color);
        }
    }

    .layer-selector__handle {
        width: 16%;
        height: 100%;
        cursor: grab;
        display: flex;
        flex-direction: column;
        justify-content: center;
    }

    .layer-selector__label {
        width: 90%;
    }

    button {
        background-color: transparent;
        width: 24px;
        margin-top: 0;
        padding: 0;
        display: flex;
        flex-direction: column;
        justify-content: center;
    }
}

#layer-select,
#layer-controls {
    display: flex;
    flex-direction: column;
    gap: 4px;
}

#layer-controls {
    flex-direction: row;

    button {
        width: 33%;
    }
}


#transforms:not(.open) {
    // for some reason, this element doesnt leave enough space when closed
    margin-bottom: 6px;
}

#output-configuration {
    grid-area: leftSidebar;
    margin: 0 4px;
    display: flex;
    flex-direction: column;
    gap: 6px;

    >fieldset {
        display: flex;
        flex-direction: column;
    }
}

